# openapi.yaml
@@ -174,6 +174,12 @@ components:
           type: string
         ga4_property_id:
           type: string
+        ig_account_id:
+          type: string
+          nullable: true
+        fb_page_id:
+          type: string
+          nullable: true
 
     Ga4KpiResponse:
       type: object
@@ -216,6 +222,13 @@ components:
       type: object
       description: Social KPI results for Instagram or Facebook
       properties:
+        client:
+          type: string
+          nullable: true
+          description: Client key if resolved via ?client= parameter
+        account_id:
+          type: string
+          description: The Instagram User ID or Facebook Page ID used
         instagram:
           type: object
           nullable: true
